<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>io.github.mtrevisan</groupId>
	<artifactId>boxon</artifactId>
	<version>3.5.1</version>

	<packaging>jar</packaging>

	<name>Boxon</name>
	<description>Library for declarative, bit-level, parsing of a message</description>
	<url>https://github.com/mtrevisan/Boxon</url>
	<inceptionYear>2020</inceptionYear>
	<licenses>
		<license>
			<name>MIT License</name>
			<url>https://opensource.org/licenses/MIT</url>
			<distribution>repo</distribution>
		</license>
	</licenses>
	<developers>
		<developer>
			<id>mtrevixan</id>
			<name>Mauro Trevisan</name>
			<url>https://github.com/mtrevisan/</url>
			<roles>
				<role>Administrator</role>
				<role>Developer</role>
			</roles>
			<timezone>Europe/Rome</timezone>
			<properties>
				<picUrl>https://i.postimg.cc/5tphfyN6/mtrevixan.jpg</picUrl>
			</properties>
		</developer>
	</developers>

	<scm>
		<url>https://github.com/mtrevisan/Boxon</url>
		<connection>scm:git:https://github.com/mtrevisan/Boxon</connection>
	</scm>

	<issueManagement>
		<system>GitHub Issues</system>
		<url>https://github.com/mtrevisan/boxon/issues</url>
	</issueManagement>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

		<java.version>21</java.version>
		<maven.compiler.source>21</maven.compiler.source>
		<maven.compiler.target>21</maven.compiler.target>

		<javadoc.html.version>-html5</javadoc.html.version>

		<!-- Profiles & Build -->
		<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-deploy-plugin -->
		<maven-deploy-plugin.version>3.1.1</maven-deploy-plugin.version>
		<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-gpg-plugin -->
		<maven-gpg-plugin.version>3.2.2</maven-gpg-plugin.version>
		<!-- https://mvnrepository.com/artifact/org.sonatype.plugins/nexus-staging-maven-plugin -->
		<sonatype.nexus-staging-maven-plugin.version>1.6.13</sonatype.nexus-staging-maven-plugin.version>
		<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-source-plugin -->
		<maven-source-plugin.version>3.3.1</maven-source-plugin.version>
		<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-javadoc-plugin -->
		<maven-javadoc-plugin.version>3.6.3</maven-javadoc-plugin.version>
		<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-surefire-plugin -->
		<maven-surefire-plugin.version>3.2.5</maven-surefire-plugin.version>
		<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-compiler-plugin -->
		<maven-compiler-plugin.version>3.13.0</maven-compiler-plugin.version>
		<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-help-plugin -->
		<maven-help-plugin.version>3.4.0</maven-help-plugin.version>

		<!-- ClassGraph -->
		<!-- https://mvnrepository.com/artifact/io.github.classgraph/classgraph -->
		<github.classgraph.version>4.8.170</github.classgraph.version>

		<!-- Spring Expression -->
		<!-- https://mvnrepository.com/artifact/org.springframework/spring-expression -->
		<springframework.spring-expression.version>6.1.5</springframework.spring-expression.version>

		<!-- FreeMarker -->
		<!-- https://mvnrepository.com/artifact/org.freemarker/freemarker -->
		<freemarker.freemarker.version>2.3.32</freemarker.freemarker.version>

		<!-- Logging -->
		<!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
		<slf4j.slf4j-api.version>2.0.12</slf4j.slf4j-api.version>
		<!-- https://mvnrepository.com/artifact/ch.qos.logback/logback-classic -->
		<logback.logback-classic.version>1.5.3</logback.logback-classic.version>

		<!-- JUnit -->
		<!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-engine -->
		<junit.junit-jupiter-engine.version>5.10.2</junit.junit-jupiter-engine.version>
	</properties>

	<repositories>
		<repository>
			<id>java-net-repo</id>
			<url>https://maven.java.net/content/repositories/public/</url>
		</repository>
		<repository>
			<id>java-apache-repo</id>
			<url>https://repo.maven.apache.org/maven2/</url>
		</repository>
		<repository>
			<id>java-spring-repo</id>
			<url>https://repo.spring.io/ui/native/release/</url>
		</repository>
	</repositories>

	<profiles>
		<profile>
			<id>stage</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<build>
				<plugins>
					<!-- Deploy -->
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-deploy-plugin</artifactId>
						<version>${maven-deploy-plugin.version}</version>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<!-- mvn clean deploy -Prelease -U -Dmaven.test.skip=true -->
			<!-- https://stackoverflow.com/questions/41265266/how-to-solve-inaccessibleobjectexception-unable-to-make-member-accessible-m/41265267#41265267 -->
			<id>release</id>
			<properties>
				<gpg.executable>gpg</gpg.executable>
			</properties>
			<build>
				<plugins>
					<!-- Signing JAR Files -->
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-gpg-plugin</artifactId>
						<version>${maven-gpg-plugin.version}</version>
						<executions>
							<execution>
								<id>sign-artifacts</id>
								<phase>verify</phase>
								<goals>
									<goal>sign</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<!-- Nexus Staging Plugin -->
					<plugin>
						<groupId>org.sonatype.plugins</groupId>
						<artifactId>nexus-staging-maven-plugin</artifactId>
						<version>${sonatype.nexus-staging-maven-plugin.version}</version>
						<extensions>true</extensions>
						<executions>
							<execution>
								<id>default-deploy</id>
								<phase>deploy</phase>
								<goals>
									<goal>deploy</goal>
								</goals>
							</execution>
						</executions>
						<configuration>
							<!-- The Base URL of Nexus instance where we want to stage -->
							<serverId>sonatype-nexus-staging</serverId>
							<nexusUrl>https://oss.sonatype.org/</nexusUrl>
							<autoReleaseAfterClose>true</autoReleaseAfterClose>
						</configuration>
					</plugin>
					<!-- Source -->
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-source-plugin</artifactId>
						<version>${maven-source-plugin.version}</version>
						<executions>
							<execution>
								<id>attach-sources</id>
								<goals>
									<goal>jar-no-fork</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<!-- JavaDoc -->
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-javadoc-plugin</artifactId>
						<version>${maven-javadoc-plugin.version}</version>
						<executions>
							<execution>
								<id>attach-javadoc</id>
								<phase>package</phase>
								<goals>
									<goal>jar</goal>
								</goals>
								<configuration>
									<additionalOptions>${javadoc.html.version}</additionalOptions>
									<javadocExecutable>${java.home}/bin/javadoc</javadocExecutable>
									<locale>en</locale>
								</configuration>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>

			<distributionManagement>
				<snapshotRepository>
					<id>sonatype-nexus-snapshots</id>
					<name>Sonatype Nexus Snapshots</name>
					<url>https://oss.sonatype.org/content/repositories/snapshots/</url>
					<uniqueVersion>true</uniqueVersion>
				</snapshotRepository>
				<repository>
					<id>sonatype-nexus-staging</id>
					<name>Nexus Release Repository</name>
					<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
					<uniqueVersion>false</uniqueVersion>
				</repository>
			</distributionManagement>
		</profile>
	</profiles>

	<build>
		<plugins>
			<!-- Surefire -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>${maven-surefire-plugin.version}</version>
				<configuration>
					<argLine>
						--add-opens io.github.mtrevisan.boxon/io.github.mtrevisan.boxon.annotations.checksummers=ALL-UNNAMED
						--add-opens io.github.mtrevisan.boxon/io.github.mtrevisan.boxon.annotations.converters=ALL-UNNAMED
						--add-opens io.github.mtrevisan.boxon/io.github.mtrevisan.boxon.annotations.validators=ALL-UNNAMED
						--add-opens io.github.mtrevisan.boxon/io.github.mtrevisan.boxon.core=spring.core,ALL-UNNAMED
						--add-opens io.github.mtrevisan.boxon/io.github.mtrevisan.boxon.core.codecs=ALL-UNNAMED
						--add-opens io.github.mtrevisan.boxon/io.github.mtrevisan.boxon.core.codecs.queclink=spring.core,spring.expression
						--add-opens io.github.mtrevisan.boxon/io.github.mtrevisan.boxon.core.codecs.teltonika=spring.core,spring.expression
						--add-opens io.github.mtrevisan.boxon/io.github.mtrevisan.boxon.core.helpers=ALL-UNNAMED
						--add-opens io.github.mtrevisan.boxon/io.github.mtrevisan.boxon.core.parsers=spring.core,ALL-UNNAMED
						--add-opens io.github.mtrevisan.boxon/io.github.mtrevisan.boxon.core.parsers.matchers=ALL-UNNAMED
						--add-opens io.github.mtrevisan.boxon/io.github.mtrevisan.boxon.helpers=ALL-UNNAMED
						--add-opens io.github.mtrevisan.boxon/io.github.mtrevisan.boxon.io=ALL-UNNAMED
						--add-opens io.github.mtrevisan.boxon/io.github.mtrevisan.boxon.semanticversioning=ALL-UNNAMED
					</argLine>
				</configuration>
			</plugin>
			<!-- Compiler -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${maven-compiler-plugin.version}</version>
				<configuration>
					<source>${maven.compiler.source}</source>
					<target>${maven.compiler.target}</target>
					<encoding>${project.build.sourceEncoding}</encoding>
					<showDeprecation>true</showDeprecation>
					<!--
					  TODO:
						 Remove .mvn/jvm.config after OSSRH-66257, NEXUS-26993 are fixed,
						 possibly via https://github.com/sonatype/nexus-maven-plugins/pull/91
						 Content of the file is:
							&#45;&#45;add-opens java.base/java.io=ALL-UNNAMED
							&#45;&#45;add-opens java.base/java.lang=ALL-UNNAMED
							&#45;&#45;add-opens java.base/java.lang.reflect=ALL-UNNAMED
							&#45;&#45;add-opens java.base/java.text=ALL-UNNAMED
							&#45;&#45;add-opens java.base/java.util=ALL-UNNAMED
							&#45;&#45;add-opens java.base/java.util.concurrent=ALL-UNNAMED
							&#45;&#45;add-opens java.desktop/java.awt.font=ALL-UNNAMED
					-->
				</configuration>
			</plugin>
			<!-- Help -->
			<!-- display active profile in compile phase -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-help-plugin</artifactId>
				<version>${maven-help-plugin.version}</version>
				<executions>
					<execution>
						<id>show-profiles</id>
						<phase>compile</phase>
						<goals>
							<goal>active-profiles</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<!-- Templating -->
			<!-- https://mvnrepository.com/artifact/org.codehaus.mojo/templating-maven-plugin -->
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>templating-maven-plugin</artifactId>
				<version>3.0.0</version>
				<executions>
					<execution>
						<id>generate-version-class</id>
						<goals>
							<goal>filter-sources</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<dependencies>
		<!-- ClassGraph -->
		<dependency>
			<groupId>io.github.classgraph</groupId>
			<artifactId>classgraph</artifactId>
			<version>${github.classgraph.version}</version>
		</dependency>

		<!-- SpEL -->
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-expression</artifactId>
			<version>${springframework.spring-expression.version}</version>
		</dependency>

		<!-- FreeMarker -->
		<dependency>
			<groupId>org.freemarker</groupId>
			<artifactId>freemarker</artifactId>
			<version>${freemarker.freemarker.version}</version>
		</dependency>

		<!-- Logging -->
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>${slf4j.slf4j-api.version}</version>
		</dependency>
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
			<version>${logback.logback-classic.version}</version>
			<scope>test</scope>
			<optional>true</optional>
		</dependency>

		<!-- JUnit -->
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<version>${junit.junit-jupiter-engine.version}</version>
			<scope>test</scope>
		</dependency>
	</dependencies>
</project>
